--- a/source/layouts/layout.haml
+++ b/source/layouts/layout.haml
@@ -33,7 +33,7 @@
 
     -# Stylesheets
     = stylesheet_link_tag 'application'
-  %body{'ng-app'=>'App', class: current_page.data.body_class || 'page'}
+  %body
     = yield
     -# Javascripts
     = javascript_include_tag 'application'
